<resources>
    <string name="app_name">UVWearIot</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="recommendation">Recommendation</string>
    <string name="date">Date</string>
    <string name="lbl_pulse">Pulse :</string>
    <string name="uv">UV Index:</string>
    <string name="pulse_value">Pulse Value</string>
    <string name="uv_index_value">UV Index Value</string>
    <string name="connect_device">Connect Device</string>
    <string name="device_connected">Device Connected</string>
</resources>
