<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/txt_recommendation"
        android:layout_width="208dp"
        android:layout_height="52dp"
        android:gravity="center"
        android:text="@string/recommendation"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086" />

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="133dp"
        android:layout_height="26dp"
        android:gravity="center"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_recommendation"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/lbl_Pulse"
        android:layout_width="93dp"
        android:layout_height="22dp"
        android:gravity="end"
        android:text="@string/lbl_pulse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_recommendation"
        app:layout_constraintVertical_bias="0.176" />

    <TextView
        android:id="@+id/txt_pulse"
        android:layout_width="93dp"
        android:layout_height="22dp"
        android:gravity="start"
        android:text="@string/pulse_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.679"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_recommendation"
        app:layout_constraintVertical_bias="0.175" />

    <TextView
        android:id="@+id/lbl_UV"
        android:layout_width="93dp"
        android:layout_height="22dp"
        android:gravity="end"
        android:text="@string/uv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_recommendation"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/txt_UVIndex"
        android:layout_width="93dp"
        android:layout_height="22dp"
        android:gravity="start"
        android:text="@string/uv_index_value"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.679"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_recommendation"
        app:layout_constraintVertical_bias="0.25" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_connect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_device" />

        <TextView
            android:id="@+id/lbl_Connected"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/device_connected"
            android:textSize="18sp"
            android:visibility="gone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>